2024-04-18  Thanh Han The  <hanthethanh@gmail.com>

	* pdftex.web (pdf_begin_string): increase tolerance for finding
	interword spaces by 1pt, since overfull lines can have smaller
	spaces than space-space_shrink. Report from Ulrike,
	https://tug.org/pipermail/pdftex/2024-April/009388.html

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-04  Karl Berry  <karl@tug.org>

        * NEWS,
        * pdftex_version.h,
        * pdftex.web (pdftex_revision, pdftex_version_string):
        version [1.40.]26 for TL24.

2024-01-14  Thanh Han The  <hanthethanh@gmail.com>

	* pdftoepdf.cc (write_epdf): call writeRefs at the end, to write
	all indirect objects after writing everything else.
	From pdftex r916 (and test in r915). Original report:
	https://bugs.ghostscript.com/show_bug.cgi?id=706940

2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Avoid errors on parallel test processing.

2023-11-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add tests for --recorder and *.fls.

2023-11-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add test for file names with over-BMP
	(4byte UTF-8).
	https://tug.org/pipermail/tex-live/2023-November/049685.html

2023-10-27  Thanh Han The  <hanthethanh@gmail.com>

	* tounicode.c (deftounicode): sscanf %lX into unsigned long to
	avoid failure in text extraction on BigEndian systems. Report
	from hille42,
	https://tug.org/pipermail/pdftex/2023-October/009342.html.

2023-09-01  Karl Berry  <karl@freefriends.org>

	* ptexmac.h (cmp_return): a few words of documentation about
	the seemingly strange lack of handling the a==b case.
	Suggested by Jim Diamond.

2023-08-28  Karl Berry  <karl@freefriends.org>

	* tounicode.c (undump_to_unicode): check that gu->name
	(and gu->unicode_seq) did not get undumped as NULL.
	Report from Gregory DUCK,
	https://tug.org/pipermail/tex-live/2023-August/049406.html.

2023-08-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/{cnfline,partoken}.test: